<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Manus Remote</string>
    <string name="title_activity_intercoms">Interfones</string>
    <string name="title_activity_intercom_config">Interfone</string>
    <string name="title_activity_intercom_create">IntercomCreate</string>
    <string name="title_activity_intercom_remote">IntercomRemote</string>
    <string name="title_activity_cameras">Cameras</string>
    <string name="title_activity_camera_config">Camera</string>
    <string name="title_activity_camera_create">CameraCreate</string>
    <string name="title_activity_camera_remote">CameraRemote</string>
    <string name="delete_intercom">Excluir interfone?</string>
    <string name="delete_camera">Excluir camera?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="cameras">Cameras</string>
    <string name="name">Nome:</string>
    <string name="ip">Ip:</string>
    <string name="port">Porta:</string>
    <string name="username">Nome usuário:</string>
    <string name="password">Senha:</string>
    <string name="exampleName">Casa 4</string>
    <string name="exampleIp">187.254.34.2</string>
    <string name="examplePort">8081</string>
    <string name="exampleUsername">manus</string>
    <string name="examplePassword">12345</string>
    <string name="ringTimeout">Ring timeout:</string>
    <string name="intercomsUppercase">INTERFONES</string>
    <string name="camerasUppercase">CAMERAS</string>
    <string name="save">Salvar</string>
    <string name="remoteManaging">Gerenciamento remoto</string>
    <string name="delete">Excluir</string>
    <string name="create">Criar</string>
    <string name="validation_field_required">Campo obrigatório</string>
    <string name="validation_wrong_format">Verifique o formato</string>
    <string name="validation_port">Deve ser número menor do que 65536</string>
    <string name="validation_number">Deve ser número</string>
    <string name="validation_whitespace">Não pode conter espaços</string>
    <string name="access_cameras">Acessar cameras</string>
    <string name="ip_cam_viewer_not_installed">O aplicativo Ip Cam Viewer não foi encontrado em seu dispositivo.</string>
    <string name="do_you_wish_to_install">Deseja acessar o Google Play para efetuar o download?</string>
    <string name="every_camera_name">(Uma vez instalado o aplicativo, configure cada camera com o mesmo nome usado aqui)</string>
    <string name="no_camera_access">O acesso às cameras não será possível até instalar o aplicativo Ip Cam Viewer</string>
    <string name="call">Interfonar/Ligar para:</string>
    <string name="enable_motion_detection">Habilitar detecção de movimento?</string>
    <string name="record_video">Gravar video e enviar para servidor FTP</string>
    <string name="take_photo">Tirar foto e enviar por e-mail</string>
    <string name="internet_connection_required">É necessária uma conexão Internet.</string>
    <string name="remote_config_loading_error">Erro na busca da configuração remota</string>
    <string name="parameter_reading_error">"Erro na leitura do parâmetro "</string>
    <string name="config_data_loading_failed">Não foi possível carregar os dados de configuração</string>
    <string name="configuration_saved">A configuração foi salva</string>
    <string name="title_activity_intercom_webview">IntercomWebviewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="page_loading_error">Erro ao carregar a página</string>
    <string name="please_wait">Aguarde, por favor</string>
    <string name="clone">Clonar</string>

</resources>
