<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fb.manusremote.intercom.view.IntercomConfig">

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/intercomNameLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:singleLine="true"
        android:hint="@string/exampleName"
        android:id="@+id/intercomNameEdit"
        android:layout_below="@+id/intercomNameLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip"
        android:id="@+id/intercomIpLabel"
        android:layout_below="@+id/intercomNameEdit"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:singleLine="true"
        android:hint="@string/exampleIp"
        android:id="@+id/intercomIpEdit"
        android:layout_below="@+id/intercomIpLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:id="@+id/intercomPortLabel"
        android:layout_below="@+id/intercomIpEdit"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:singleLine="true"
        android:hint="@string/examplePort"
        android:id="@+id/intercomPortEdit"
        android:layout_below="@+id/intercomPortLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/intercomUsernameLabel"
        android:layout_below="@+id/intercomPortEdit"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:singleLine="true"
        android:hint="@string/exampleUsername"
        android:id="@+id/intercomUsernameEdit"
        android:layout_below="@+id/intercomUsernameLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/intercomPasswordLabel"
        android:layout_below="@+id/intercomUsernameEdit"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:singleLine="true"
        android:hint="@string/examplePassword"
        android:id="@+id/intercomPasswordEdit"
        android:layout_below="@+id/intercomPasswordLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
</ScrollView>