<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fb.manusremote.intercom.view.IntercomConfigActivity">
    <item android:id="@+id/action_save_voip"
        android:title="@string/save"
        android:icon="@drawable/ic_ok"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_config_voip"
        android:title="@string/remoteManaging"
        android:icon="@drawable/ic_action"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_delete_voip"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="100"
        app:showAsAction="always" />
</menu>
