<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fb.manusremote.intercom.IntercomConfig">
    <item android:id="@+id/action_save_intercom"
        android:title="@string/save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_config_intercom"
        android:title="@string/remoteManaging"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_delete_intercom"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        app:showAsAction="always" />
</menu>
