<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fb.manusremote.intercom.view.IntercomConfig">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/cameraRemoteSpinner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/cameraRemoteError"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:text="@string/config_data_loading_failed"
            android:textSize="20dp"
            android:gravity="center"
            android:visibility="invisible"/>

        <RelativeLayout
            android:id="@+id/cameraRemoteContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_motion_detection"
                android:id="@+id/cameraMotionDetectionLabel"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/cameraMotionDetectionLabel"
                android:id="@+id/cameraMotionDetectionRadioGroup"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:id="@+id/cameraMotionDetectionRadioYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/cameraMotionDetectionRadioNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>

            <View
                android:id="@+id/separator1"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/cameraMotionDetectionRadioGroup" />

            <LinearLayout
                android:id="@+id/callFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/separator1">

                <CheckBox
                    android:id="@+id/cameraCallCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:inputType="phone"
                    android:singleLine="true"
                    android:id="@+id/cameraCallEdit"
                    android:layout_below="@+id/intercomRingTimeoutLabel" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cameraRecordVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_video"
                android:layout_below="@+id/callFields"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <CheckBox
                android:id="@+id/cameraTakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                android:layout_below="@+id/cameraRecordVideo"
                android:layout_marginBottom="10dp" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>